Barebones fullscreen (press "F")

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <div id="map"></div>
+        <div id="quiz"></div>
         <!-- d3.js -->
         <script src="https://d3js.org/d3.v7.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Turf.js/5.1.5/turf.min.js"></script>
